# tiktokshop

./: package-lock.json
backend/: .env  alembic.ini  main.py  pyproject.toml  requirements.txt  rough.py
backend/alembic/: env.py
backend/alembic/versions/: 4493b0bbea6b_create_todos_table.py  f01e7174b611_add_order_table.py
backend/config/: database.py
backend/models/: model.py
backend/utils/: pydantic.py  util.py
frontend/: .env  .env.production  README.md  index.html  package-lock.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/auth/: AuthForm.tsx
frontend/src/components/dashboard/: ActionButton.tsx  MetricsCard.tsx  SalesChart.tsx
frontend/src/components/navigation/: BottomNav.tsx
frontend/src/components/ui/: button.tsx  chart.tsx
frontend/src/pages/: AddProduct.tsx  Analytics.tsx  Dashboard.tsx  DistributionCenter.tsx  Index.tsx  Order.tsx  ProductDetail.tsx  ProductList.tsx  Profile.tsx  RefundOrders.tsx  Service.tsx  ShopExpress.tsx  ShopSettings.tsx  Withdrawal.tsx
